# zitsol_mod

./: CMakeLists.txt  makefile  zarms2.c  ziluk.c
LIB/: zheads.h  zilutc.c  zilutpC.c  zprotos.h  zprtC.c  zsets.c
